[package]
name = "error_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.72" }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.sea-orm]
version = "0.4.2"
features = ["macros", "runtime-tokio-native-tls", "sqlx-mysql"]
default-features = false

[dependencies.tokio]
features = ["parking_lot"]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"
